yaml/raven-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: raven-agent-ds
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: raven-agent
  template:
    metadata:
      labels:
        app: raven-agent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: NotIn
                values:
                - virtual-kubelet
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: VPN_CONNECTION_PSK
          valueFrom:
            secretKeyRef:
              key: vpn-connection-psk
              name: raven-agent-secret
        - name: VPN_DRIVER
          valueFrom:
            configMapKeyRef:
              key: vpn-driver
              name: raven-agent-config
        - name: FORWARD_NODE_IP
          valueFrom:
            configMapKeyRef:
              key: forward-node-ip
              name: raven-agent-config
        image: openyurt/raven-agent:latest
        imagePullPolicy: Always
        name: raven-agent
        securityContext:
          privileged: true
      hostNetwork: true
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      serviceAccountName: raven-agent-account
      tolerations:
      - operator: Exists
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 5%
