yaml/gw-hangzhou.yaml
apiVersion: raven.openyurt.io/v1alpha1
kind: Gateway
metadata:
  name: gw-hangzhou
spec:
  endpoints:
    - nodeName: edge-hangzhou
      underNAT: true
