yaml/gw-shanghai.yaml
apiVersion: raven.openyurt.io/v1alpha1
kind: Gateway
metadata:
  name: gw-shanghai
spec:
  endpoints:
    - nodeName: edge-shanghai
      underNAT: true
